@@ -2,7 +2,7 @@
 <addon
     id="script.mtvguide"
     name="m-TVGuide [COLOR gold][B]EPG[/B][/COLOR]"
-    version="9.9.5-beta.10"
+    version="9.9.5-beta.11"
     provider-name="Mods-kodi">
   <requires>
     <import addon="xbmc.addon" version="17.0.0"/>
@@ -46,6 +46,7 @@
 - Fixed encodings.
 - Optimized performance.
 - Added playlist caching.
+- Fixed local timezone.
 - Bug fixes.
 
 v9.9.4 (2022-03-02)
