@@ -3130,7 +3130,9 @@ def parseTvDate(dateString, zone, autozone, local):
     if zoneString:
         offset = timedelta(minutes=int(zoneString[:3]) * 60 + int(zoneString[-2:]))
     else:
-        offset = None
+        zoneString = '+0000'
+        offset = timedelta(minutes=int(zoneString[:3]) * 60 + int(zoneString[-2:]))
+
     dt = datetime(*(int(dateString[i:i+2 if i else i+4]) for i in (0, 4, 6, 8, 10, 12)))
     if zone:
         offset = zone
